--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<meta http-equiv="refresh" content="0; url=https://evanp23.github.io/Spotify-Viewer/public/index.html">
+<!-- <meta http-equiv="refresh" content="0; url=https://evanp23.github.io/Spotify-Viewer/public/index.html"> -->
+<h1>
+    Hello world!!!!
+</h1>
