--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<!-- <meta http-equiv="refresh" content="0; url=https://evanp23.github.io/Spotify-Viewer/public/index.html"> -->
-<h1>
-    Hello world!!!!
-</h1>
+<meta http-equiv="refresh" content="0; url=https://evanp23.github.io/Spotify-Viewer/public/index.html">
