--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Spotify Viewer</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script href="../src/index.tsx"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
