--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>Spotify Viewer</title>
   </head>
   <body>
+    <h1>this is a test</h1>
     <script href="../src/index.tsx"></script>
     <div id="root"></div>
     <!--
